fix: 更新漏洞报告模板描述，明确为扩展问题

--- a/.github/ISSUE_TEMPLATE/reprt-bugs.yaml
+++ b/.github/ISSUE_TEMPLATE/reprt-bugs.yaml
@@ -1,5 +1,5 @@
 name: 报告漏洞 Report Bugs
-description: 汇报 MediaWiki 软件问题 Report MediaWiki software bugs.
+description: 汇报扩展问题 Report extension bugs.
 title: "[BUG]: "
 labels: ["bug"]
 assignees:
