feat: 更新功能建议模板，添加英文描述以增强可读性

--- a/.github/ISSUE_TEMPLATE/request-features.yaml
+++ b/.github/ISSUE_TEMPLATE/request-features.yaml
@@ -1,5 +1,5 @@
-name: 功能建议
-description: 提出新的建议。
+name: 功能建议 Feature Request
+description: 提出新的建议。Suggest new features.
 title: "[FEATURE]: "
 labels: ["enhancement"]
 assignees:
