--- a/.github/ISSUE_TEMPLATE/request-features.yaml
+++ b/.github/ISSUE_TEMPLATE/request-features.yaml
@@ -4,7 +4,7 @@ title: "[FEATURE]: "
 labels: ["enhancement"]
 assignees:
   - ZoruaFox
-  - awajie
+  - ajdgg
 body:
   - type: markdown
     attributes:
